# mfc2019

./: .gitignore  CMakeLists.txt  mfc2019.sln
mfc2019/: CMakeLists.txt  MainFrm.cpp  Resource.h  mfc2019.cpp  mfc2019.h  mfc2019.rc  mfc2019.vcxproj  mfc2019.vcxproj.filters  mfc2019Doc.cpp  mfc2019Doc.h  mfc2019View.cpp  mfc2019View.h
mfc2019/res/: mfc2019.rc2
